# mvp2-hdt

./: test.json
API-gateway/: apiGateWay.yaml
backend_auth/: .env  package-lock.json  package.json  tsconfig.json
backend_auth/src/: index.ts
backend_dashboard/: .env  package-lock.json  package.json
backend_dashboard/src/: index.ts
backend_datasci/: .env  package-lock.json  package.json
backend_datasci/src/: index.ts
backend_haaracscade/: .env  Dockerfile  package-lock.json  package.json
backend_haaracscade/src/: index.ts
backend_heartrate/: .env  Dockerfile  package-lock.json  package.json  tsconfig.json
backend_heartrate/src/: index.ts
backend_homepage/: .env  index.yaml  package-lock.json  package.json  tsconfig.json
backend_homepage/src/: index.ts
backend_line/: .env  package-lock.json  package.json
backend_line/src/: index.ts
backend_login/: .env  Dockerfile  package-lock.json  package.json  tsconfig.json
backend_login/src/: env_mangement.ts  environment.d.ts  index.ts
backend_register/: .env  package-lock.json  package.json
backend_register/src/: index.ts
backend_selfreport/: .env  Dockerfile  global.d.ts  package-lock.json  package.json  tsconfig.json
backend_selfreport/src/: env_mangement.ts  index.ts
backend_updateprofile/: .env  index.yaml  package-lock.json  package.json
backend_updateprofile/src/: index.ts
backend_wordcloud_py/: .env  .pdm.toml  Dockerfile  main.py  pyproject.toml  requirements.txt
frontend/: .env  Dockerfile  README.md  app.yaml  index.html  package-lock.json  package.json  vite.config.js
(+80 files in other folders)
